# Tracey-Editor

./: .gitignore  .gitmodules  CMakeLists.txt  Tracey Editor.jucer
JuceLibraryCode/: JuceHeader.h
source/: main.cpp
source/actions/: action.cpp  action.h  load_scene_action.cpp  load_scene_action.h  load_scene_action.hpp  project_query_action.cpp  project_query_action.hpp  render_scene_action.cpp  render_scene_action.hpp
source/controller/: application_controller.cpp  application_controller.h  application_controller.hpp
source/model/: menu.cpp  menu.hpp  scene_graph.cpp  scene_graph.h  scene_graph.hpp  track.cpp  track.hpp
source/ui/: animation_panel.cpp  animation_panel.hpp  main_component.cpp  main_component.hpp  node_inspector.cpp  node_inspector.hpp  scene_graph_view.cpp  scene_graph_view.hpp  track_panel.cpp  track_panel.hpp  track_view.cpp  track_view.hpp  view_port.cpp  view_port.hpp
